# Prisoner-Dilemma

./: CMakeLists.txt  README.md
example/: main.cpp  matrix.txt
lib/cl_parser/: CMakeLists.txt
lib/cl_parser/include/: cl_parser.h
lib/cl_parser/src/: cl_parser.cpp
lib/cl_parser/test/: tests_cl_parser.cpp
lib/game/: CMakeLists.txt
lib/game/include/: game.h
lib/game/src/: game.cpp
lib/game/test/: tests_game.cpp
lib/matrix/: CMakeLists.txt
lib/matrix/include/: matrix.h
lib/matrix/src/: matrix.cpp
lib/matrix/test/: tests_matrix.cpp
lib/matrix/test/file/: matrix.txt  wrong_matrix1.txt  wrong_matrix2.txt
lib/mode/: CMakeLists.txt
lib/mode/abstract_mode/: CMakeLists.txt
lib/mode/abstract_mode/include/: abstract_mode.h
lib/mode/abstract_mode/src/: abstract_mode.cpp
lib/mode/detailed_mode/: CMakeLists.txt
lib/mode/detailed_mode/include/: detailed_mode.h
lib/mode/detailed_mode/src/: detailed_mode.cpp
lib/mode/fast_mode/: CMakeLists.txt
lib/mode/fast_mode/include/: fast_mode.h
lib/mode/fast_mode/src/: fast_mode.cpp
lib/mode/mode_creator/: CMakeLists.txt
lib/mode/mode_creator/include/: mode_creator.h
lib/mode/mode_creator/src/: mode_creator.cpp
lib/mode/mode_creator/test/: tests_mode_creator.cpp
lib/mode/tournament_mode/: CMakeLists.txt
lib/mode/tournament_mode/include/: tournament_mode.h
lib/mode/tournament_mode/src/: tournament_mode.cpp
lib/strategy/: CMakeLists.txt
lib/strategy/always_cooperate/: CMakeLists.txt
lib/strategy/always_cooperate/include/: always_cooperate.h
lib/strategy/always_cooperate/src/: always_cooperate.cpp
lib/strategy/always_defect/: CMakeLists.txt
lib/strategy/always_defect/include/: always_defect.h
lib/strategy/always_defect/src/: always_defect.cpp
lib/strategy/grim_trigger/: CMakeLists.txt
lib/strategy/grim_trigger/include/: grim_trigger.h
lib/strategy/grim_trigger/src/: grim_trigger.cpp
lib/strategy/grim_trigger/test/: tests_grim_trigger.cpp
lib/strategy/pavlov/: CMakeLists.txt
lib/strategy/pavlov/include/: pavlov.h
lib/strategy/pavlov/src/: pavlov.cpp
lib/strategy/pavlov/test/: tests_pavlov.cpp
lib/strategy/pavlov/test/files/: pavlov.json
lib/strategy/random/: CMakeLists.txt
lib/strategy/random/include/: random.h
lib/strategy/random/src/: random.cpp
lib/strategy/strategy_creator/: CMakeLists.txt
lib/strategy/strategy_creator/include/: strategy_creator.h
lib/strategy/strategy_creator/src/: strategy_creator.cpp
lib/strategy/strategy_creator/test/: tests_strategy_creator.cpp
lib/strategy/strategy_creator/test/files/: tit_for_tat_with_forgiveness.json
lib/strategy/strategy_interface/: CMakeLists.txt
lib/strategy/strategy_interface/include/: strategy_interface.h
lib/strategy/tit_for_tat/: CMakeLists.txt
lib/strategy/tit_for_tat/include/: tit_for_tat.h
lib/strategy/tit_for_tat/src/: tit_for_tat.cpp
lib/strategy/tit_for_tat/test/: tests_tit_for_tat.cpp
lib/strategy/tit_for_tat_with_forgiveness/: CMakeLists.txt
lib/strategy/tit_for_tat_with_forgiveness/include/: tit_for_tat_with_forgiveness.h
lib/strategy/tit_for_tat_with_forgiveness/src/: tit_for_tat_with_forgiveness.cpp
lib/strategy/tit_for_tat_with_forgiveness/test/: tests_tit_for_tat_with_forgiveness.cpp
lib/strategy/tit_for_tat_with_forgiveness/test/incorrect_config1/: tit_for_tat_with_forgiveness.json
lib/strategy/tit_for_tat_with_forgiveness/test/incorrect_config2/: tit_for_tat_with_forgiveness.json
